Fixes z-index bug

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -54,7 +54,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 3;
+  z-index: 1001;
   .navbar-link {
     margin: 10px 0;
     cursor: pointer;
